force-app/main/default/objects/Payment_Transaction_line__c/Payment_Transaction_line__c.object-meta.xml
<CustomObject>
    <label>שורת טרנזקציה</label>
    <nameField>
        <displayFormat>TRL-{0000000}</displayFormat>
        <label>שורת טרנזקציה Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Transaction line</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>