force-app/main/default/objects/Payment_Transaction_line__c/fields/Alternate_Price__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <label>מחיר שונה</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>