force-app/main/default/objects/Payment_Transaction_line__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>תיאור מוצר</label>
    <length>255</length>
    <type>Text</type>
</CustomField>