force-app/main/default/objects/Payment_Transaction_line__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <label>הנחה</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>