force-app/main/default/objects/Payment_Transaction_line__c/fields/Final_Price__c.field-meta.xml
<CustomField>
    <fullName>Final_Price__c</fullName>
    <formula>IF(
Alternate_Price__c=0,
Price__c - (Price__c * Discount__c),Alternate_Price__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>מחיר אחרי הנחה</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>