force-app/main/default/objects/Payment_Transaction_line__c/fields/Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total__c</fullName>
    <formula>Final_Price__c*Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>סה&quot;כ כולל מע&quot;מ</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>