force-app/main/default/objects/Payment_Transaction_line__c/fields/Payment_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Payment_Transaction__c</fullName>
    <label>טרנזקציה</label>
    <referenceTo>Payment_Transaction__c</referenceTo>
    <relationshipLabel>Payment Transaction line</relationshipLabel>
    <relationshipName>Payment_Transaction_line</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>