force-app/main/default/objects/Payment_Transaction_line__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>מוצר</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Payment Transaction line</relationshipLabel>
    <relationshipName>Payment_Transaction_line</relationshipName>
    <type>Lookup</type>
</CustomField>