force-app/main/default/objects/Payment_Transaction_line__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <label>כמות</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>