force-app/main/default/objects/Payment_Transaction_line__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <label>הערות</label>
    <type>TextArea</type>
</CustomField>