force-app/main/default/objects/Payment_Transaction_line__c/fields/Vat__c.field-meta.xml
<CustomField>
    <fullName>Vat__c</fullName>
    <label>מע&quot;מ</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>